--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
 <DIV ID="page" DIR="LTR" STYLE="background: #f0f0f0">
 		<DIV ID="header" DIR="LTR">
 			<H1 STYLE="border: none; padding: 0in">Hello Svetlana's
-			World!!! Meet ALYNAH</H1>		
+			World!!! Meet ALYNAH!!!</H1>		
 		</DIV>
 		<DIV ALIGN="CENTER" COLSPAN = "2">
 			<BR>
